# fast_expr

./: .gitignore  Cargo.toml  README.md  todo.md
book/fast_expr_demo/src/: explicit.rs  lib.rs
book/src/: SUMMARY.md  todo.md
book/src/intro/: motivation.md
examples/: basic.rs  impl_macro.rs
fast_expr_book/: book.toml
fast_expr_book/fast_expr_demo/: Cargo.toml
fast_expr_book/fast_expr_demo/src/: explicit.rs  main.rs
fast_expr_book/src/: SUMMARY.md  intro.md  todo.md
fast_expr_book/src/intro/: explicit_example.md  fast_expr.md
fast_expr_gen/: Cargo.toml
fast_expr_gen/src/: check.rs  conf.rs  cxt.rs  doc.rs  err.rs  expr.rs  front.rs  gen.rs  impl_macro.rs  lib.rs  macros.rs  prelude.rs  rust.rs
fast_expr_gen/src/cxt/: frame.rs  frame_enum.rs  frames.rs  pre.rs  with_frames.rs  zip.rs  zip_struct.rs
fast_expr_gen/src/cxt/zip/: zip_struct.rs  zipper_trait.rs
fast_expr_gen/src/cxt/zip/zipper_trait/: helpers.rs  params.rs
fast_expr_gen/src/expr/: data.rs  frame.rs  variant.rs
fast_expr_gen/src/expr/data/: leaf.rs  many.rs  one.rs
fast_expr_gen/src/impl_macro/: map.rs  zip.rs
fast_expr_gen/src/rust/: typ.rs
fast_expr_proc/: Cargo.toml
fast_expr_proc/src/: ast.rs  lib.rs
fast_expr_proc_impl/: Cargo.toml
fast_expr_proc_impl/src/: expr_map.rs  expr_zip.rs  lib.rs
src/: examples.rs  lib.rs
src/examples/: book_subst_1.rs  simple.rs  test.rs
tests/: basic.rs  conf.rs  input_error.rs
