[package]
name = "fast_expr_proc"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_expr_gen = { path = "../fast_expr_gen", version = "0.1.0" }
proc-macro2 = "^1.0.21"
