[package]
name = "fast_expr_demo_lib"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

[[bin]]
name = "fast_expr_demo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_expr = { path = "../.." }
clap = "*"